# asiapac-hackthon-2019

NSecureFace/: .gitignore  CMakeLists.txt  client.cpp  client.hpp  common.hpp  config.json  face-processing.cpp  face-processing.hpp  image-sender.hpp  info.plist  nsecureface-service.cpp  nsecureface.h  simple-authorization.hpp  socket.hpp
NSecureFacePy/: .gitignore  requirements.txt
NSecureFacePy/instance/: config.py
NSecureFacePy/resources/: config.ini
NSecureFacePy/src/: aws-admin.py  aws-face-search.py  aws-image-uploader.py  aws-test.py  camera-app.py  db-test.py  faceproxy-app.py  service-app.py
NSecureFacePy/src/service/: __init__.py  db.py  secure-service.py  service.py
NSecureFacePy/src/service/forms/: RegForm.py
NSecureFacePy/src/service/templates/: client-info.html  error.html  registration.html  status.html
NSecureFacePy/src/storage/: __init__.py  schema.sql  storage.py
NSecureFace_PythonPOC/NSecureFace/: .gitignore  readme.md  requirements.txt
NSecureFace_PythonPOC/NSecureFace/src/: caffe_model.py  camera.py  camera2.py  camera3.py  client.py  draw_shape.py  embeddings.py  face-embeddings.py  face-extract.py  face-photo.py  face-recognizer.py  nsecure-face.py  train_model.py
NSecureFace_PythonPOC/NSecureFace/src/common/: colors.py  drawing.py
